Design fix – fix blur effect & gap between title and description

--- a/src/scenes/VideoArticlePage/components/Container/Container.module.scss
+++ b/src/scenes/VideoArticlePage/components/Container/Container.module.scss
@@ -73,7 +73,7 @@
 .head {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 16px;
   align-items: center;
   max-width: 640px;
   margin: 0 0 0 130px;
