--- a/src/scenes/VideoArticlePage/components/Container/components/Video/Video.module.scss
+++ b/src/scenes/VideoArticlePage/components/Container/components/Video/Video.module.scss
@@ -54,6 +54,14 @@
     height: 250px;
   }
 
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(12px);
+  }
+
   &::after {
     position: absolute;
     width: 70px;
@@ -81,10 +89,18 @@
   overflow: hidden;
   border-radius: 50%;
   transition: opacity 0.3s;
-  filter: blur(0px);
 
   .player:hover > & {
     opacity: 0;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(12px);
+    border-radius: 50%;
   }
 
   &__arrow {
@@ -101,7 +117,6 @@
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(12px);
   }
 }
 
